--- a/references.bib
+++ b/references.bib
@@ -146,7 +146,7 @@
 @book{gelman2013bda,
   title={Bayesian Data Analysis},
   edition={Third},
-  author={Gelman, Andrew and Carlin, John B and Stern, Hal S and Dunson, David B and Vehtari, Aki},
+  author={Gelman, Andrew and Carlin, John B and Stern, Hal S and Dunson, David B and Vehtari, Aki and Rubin, Donald B},
   year={2013},
   publisher={Chapman and Hall/CRC}
 }
